<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_required"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/enableSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spam_blocking"
        android:enabled="false"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/setupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_call_screening"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/viewLogsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_blocked_calls" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spam_blocking_explanation"
        android:textSize="14sp"
        android:layout_marginTop="32dp"
        android:gravity="center" />

</LinearLayout>